--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 /* General body styles */
 body {
     line-height: 1.6;
-    background-color: #93785b;
+    background-color: #fff;
     color: #333;
     align-items: center;
 }
