--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav ul li a:hover {
 
 #home {
     position: relative;
-    background: url('/Mufasa\ background.jpeg') no-repeat center center/cover;
+    background: url('Mufasa background.jpeg') no-repeat center center/cover;
     color: #ffffff;
     text-align: center;
     padding: 5rem 2rem;
@@ -421,7 +421,7 @@ header {
 /* Your Dashboard Section Styling */
 #your-dashboard {
     position: relative;
-    background: url('/dashboard\ background.jpeg') no-repeat center center/cover;
+    background: url('dashboard background.jpeg') no-repeat center center/cover;
     color: white;
     text-align: center;
     padding: 5rem 2rem;
